Move par back to left hand

--- a/includes/keymap.dtsi
+++ b/includes/keymap.dtsi
@@ -33,6 +33,14 @@
 / {
 combos {
   compatible = "zmk,combos";
+  left_middle_up {
+    key-positions = <2 12>;
+    bindings = <&kp LPAR>;
+  };
+  left_index_up {
+    key-positions = <3 13>;
+    bindings = <&kp RPAR>;
+  };
   right_index_up {
     key-positions = <6 16>;
     bindings = <&kp LBKT>;
@@ -43,11 +51,11 @@ combos {
   };
   right_index_down {
     key-positions = <16 26>;
-    bindings = <&kp LPAR>;
+    bindings = <&kp LBRC>;
   };
   right_middle_down {
     key-positions = <17 27>;
-    bindings = <&kp RPAR>;
+    bindings = <&kp RBRC>;
   };
   down_arrow {
     key-positions = <16 34>;
