--- a/build.yaml
+++ b/build.yaml
@@ -13,19 +13,27 @@
 #
 ---
 include:
+  # - board: nice_nano_v2
+  #   shield: swweeep_left
+  # - board: nice_nano_v2
+  #   shield: swweeep_right
+  
   - board: nice_nano_v2
-    shield: swweeep_left
-  - board: nice_nano_v2
-    shield: swweeep_right
+    shield: temper_dongle
   - board: nice_nano_v2
     shield: temper_left
+    cmake-args: -DCONFIG_ZMK_SPLIT=y -DCONFIG_ZMK_SPLIT_ROLE_CENTRAL=n
   - board: nice_nano_v2
     shield: temper_right
-  - board: seeeduino_xiao_ble
-    shield: totem_left
-  - board: seeeduino_xiao_ble
-    shield: totem_right
-  - board: seeeduino_xiao_ble
-    shield: totem_dongle
-  - board: seeeduino_xiao_ble
-    shield: settings_reset
+
+  # - board: seeeduino_xiao_ble
+  #   shield: totem_left
+  # - board: seeeduino_xiao_ble
+  #   shield: totem_right
+  # - board: seeeduino_xiao_ble
+  #   shield: totem_dongle
+
+  # - board: seeeduino_xiao_ble
+  #   shield: settings_reset
+  # - board: nice_nano_v2
+  #   shield: settings_reset
