--- a/build.yaml
+++ b/build.yaml
@@ -13,19 +13,19 @@
 #
 ---
 include:
-  - board: nice_nano_v2
-    shield: swweeep_left
-  - board: nice_nano_v2
-    shield: swweeep_right
+  # - board: nice_nano_v2
+  #   shield: swweeep_left
+  # - board: nice_nano_v2
+  #   shield: swweeep_right
   - board: nice_nano_v2
     shield: temper_left
   - board: nice_nano_v2
     shield: temper_right
-  - board: seeeduino_xiao_ble
-    shield: totem_left
-  - board: seeeduino_xiao_ble
-    shield: totem_right
-  - board: seeeduino_xiao_ble
-    shield: totem_dongle
-  - board: seeeduino_xiao_ble
-    shield: settings_reset
+  # - board: seeeduino_xiao_ble
+  #   shield: totem_left
+  # - board: seeeduino_xiao_ble
+  #   shield: totem_right
+  # - board: seeeduino_xiao_ble
+  #   shield: totem_dongle
+  # - board: seeeduino_xiao_ble
+  #   shield: settings_reset
