--- a/includes/keymap.dtsi
+++ b/includes/keymap.dtsi
@@ -248,13 +248,13 @@ keymap {
   NAV {
     bindings = <
       // ROW 1
-      &kp BANG         &kp PLUS         &kp HASH         &kp AMPS          &none
+      &kp BANG         &kp PLUS         &kp HASH         &kp AMPS          &kp GRAVE
       &kp CARET        &kp PERCENT      &kp STAR         &kp DOLLAR        &kp GRAVE
       // ROW 2
-      &lhm LCTRL BANG  &lhm LSHFT MINUS &lhm LALT EQUAL  &lhm LGUI LT      &lhm MEH GT
-      &rhm MEH LEFT    &rhm RGUI DOWN   &rhm RALT UP     &rhm RSHFT RIGHT  &rhm RCTRL AT
+      &lhm LCTRL AT    &lhm LSHFT MINUS &lhm LALT EQUAL  &lhm LGUI LT      &lhm MEH GT
+      &rhm MEH LEFT    &rhm RGUI DOWN   &rhm RALT UP     &rhm RSHFT RIGHT  &kp RCTRL
       // ROW 3
-      &kp TILDE        &kp UNDER        &kp UNDER        &kp PIPE          &none
+      &kp TILDE        &kp UNDER        &kp UNDER        &kp PIPE          &kp BSLH
       &kp HOME         &kp PG_DN        &kp PG_UP        &kp END           &kp BSLH
       // THUMBS
       &trans           &trans           &trans
@@ -271,7 +271,7 @@ keymap {
       &trans           &kp N7           &kp N8           &kp N9            &kp GRAVE
       // ROW 2
       &trans           &trans           &trans           &trans            &trans
-      &kp N0           &rhm RGUI N4     &rhm RALT N5     &rhm RSHFT N6     &rhm RCTRL AT
+      &rhm MEH N0      &rhm RGUI N4     &rhm RALT N5     &rhm RSHFT N6     &rhm RCTRL AT
       // ROW 3
       &trans           &trans           &trans           &trans            &trans
       &kp N0           &kp N1           &kp N2           &kp N3            &kp BSLH
@@ -289,8 +289,8 @@ keymap {
       &kp F1           &kp F2           &kp F3           &kp F4            &kp F5
       &kp C_MUTE       &kp C_VOL_DN     &kp C_VOL_UP     &ext_power EP_OFF &bt BT_CLR_ALL
       // ROW 2
-      &lhm LCTRL F6    &lhm LSHFT F7    &lhm LALT F8     &lhm LGUI F9      &kp F10
-      &kp C_PREV       &rhm RGUI C_PP   &rhm RALT C_NEXT &rhm RSHFT RCTRL  &kp RCTRL
+      &lhm LCTRL F6    &lhm LSHFT F7    &lhm LALT F8     &lhm LGUI F9      &lhm MEH F10
+      &rhm MEH C_RW    &rhm RGUI C_PREV &rhm RALT C_PP   &rhm RSHFT C_NEXT &rhm RCTRL C_FF
       // ROW 3
       &kp F11          &kp F12          &kp F13          &kp F14           &kp F15
       &bt BT_SEL 0     &bt BT_SEL 1     &bt BT_SEL 2     &bt BT_SEL 3      &bt BT_SEL 4
